--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,14 +44,17 @@ jobs:
     pool:
       vmImage: windows-latest
     steps:
-      - task: UseDotNet@2
-        displayName: 'Install .NET SDK'
-        inputs:
-          version: '$(NET_VERSION)'
+      # - task: UseDotNet@2
+      #   displayName: 'Install .NET SDK'
+      #   inputs:
+      #     version: '$(NET_VERSION)'
       - task: CmdLine@2
-        displayName: 'Install .NET MAUI workload'
+        displayName: 'Install .NET MAUI Workload'
         inputs:
-          script: 'dotnet workload install maui'
+            script : |
+              curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.300-preview.22204.3 --quality preview;
+              dotnet --info;
+              dotnet workload install maui;
       # if this is a tagged build, then update the version number
       - powershell: |
           $buildSourceBranch = "$(Build.SourceBranch)"
