--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,17 +44,19 @@ jobs:
     pool:
       vmImage: windows-latest
     steps:
-      # - task: UseDotNet@2
-      #   displayName: 'Install .NET SDK'
-      #   inputs:
-      #     version: '$(NET_VERSION)'
+      - powershell: |
+             wget https://dot.net/v1/dotnet-install.ps1 -OutFile C:\dotnet-install.ps1
+             C:\dotnet-install.ps1 -Version 6.0.300-preview.22204.3
+             dotnet --info
+             Write-Host "##vso[task.prependpath]C:\\Users\\VssAdministrator\\AppData\\Local\\Microsoft\\dotnet"
+        displayName: Install .NET 6.0.300-preview.22204.3
       - task: CmdLine@2
         displayName: 'Install .NET MAUI Workload'
         inputs:
             script : |
-              curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.300-preview.22204.3 --quality preview;
-              dotnet --info;
-              dotnet workload install maui;
+              dotnet --info
+              dotnet workload install maui
+              dotnet new globaljson --sdk-version 6.0.300-preview.22204.3 --force
       # if this is a tagged build, then update the version number
       - powershell: |
           $buildSourceBranch = "$(Build.SourceBranch)"
