--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ variables:
   PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
   PathToCommunityToolkitSampleCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
+  PathToCommunityToolkitBenchmarkCsproj: 'src/CommunityToolkit.Maui.Markup.Benchmarks/CommunityToolkit.Maui.Markup.Benchmarks.csproj'
   PathToCommunityToolkitSourceGeneratorsCsproj: 'src/CommunityToolkit.Maui.Markup.SourceGenerators/CommunityToolkit.Maui.Markup.SourceGenerators.csproj'
   XcodeVersion: '15.2.0'
   ShouldCheckDependencies: true
@@ -42,7 +43,7 @@ schedules:
     - main
 
 jobs:      
-  - job: build_sample
+  - job: build_library
     displayName: Build Library
     strategy:
       matrix:
@@ -131,6 +132,13 @@ jobs:
         inputs:
           script: 'dotnet test -c Release $(PathToCommunityToolkitUnitTestCsproj) --settings ".runsettings" --collect "XPlat code coverage" --logger trx --results-directory $(Agent.TempDirectory)'
 
+      - task: DotNetCoreCLI@2
+        displayName: 'Run Benchmarks'
+        inputs:
+          command: 'custom'
+          custom: 'run'
+          arguments: '--project $(PathToCommunityToolkitBenchmarkCsproj) --configuration Release'
+
       - task: PublishTestResults@2
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         displayName: 'Publish Test Results'
@@ -146,6 +154,12 @@ jobs:
           codeCoverageTool: 'Cobertura'
           summaryFileLocation: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
           failIfCoverageEmpty: true
+
+      - task: PublishPipelineArtifact@1
+        inputs:
+          targetPath: '$(Build.SourcesDirectory)/artifacts/BenchmarkDotNet.Artifacts'
+          artifact: 'benchmark-results'
+          publishLocation: 'pipeline'
 
       # pack
       - task: CmdLine@2
