--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -132,13 +132,6 @@ jobs:
         inputs:
           script: 'dotnet test -c Release $(PathToCommunityToolkitUnitTestCsproj) --settings ".runsettings" --collect "XPlat code coverage" --logger trx --results-directory $(Agent.TempDirectory)'
 
-      - task: DotNetCoreCLI@2
-        displayName: 'Run Benchmarks'
-        inputs:
-          command: 'custom'
-          custom: 'run'
-          arguments: '--project $(PathToCommunityToolkitBenchmarkCsproj) --configuration Release'
-
       - task: PublishTestResults@2
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         displayName: 'Publish Test Results'
@@ -155,8 +148,16 @@ jobs:
           summaryFileLocation: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
           failIfCoverageEmpty: true
 
+      - task: DotNetCoreCLI@2
+        displayName: 'Run Benchmarks'
+        inputs:
+          command: 'custom'
+          custom: 'run'
+          arguments: '--project $(PathToCommunityToolkitBenchmarkCsproj) --configuration Release'
+
       - task: PublishPipelineArtifact@1
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
+        displayName: 'Publish Benchmark Artifacts'
         inputs:
           targetPath: '$(Build.SourcesDirectory)/**/BenchmarkDotNet.Artifacts'
           artifact: 'benchmark-results'
