--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,54 @@ schedules:
     include:
     - main
 
-jobs:      
+jobs:
+  - job: build_sample
+    displayName: Build Sample App
+    strategy:
+      matrix:
+        'Windows':
+          image: 'windows-latest'
+        'macOS':
+          image: 'macos-13'
+    pool:
+      vmImage: $(image)
+    steps:
+      - task: CmdLine@2
+        displayName: 'Set Xcode v$(XcodeVersion)'
+        condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
+        inputs:
+          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
+
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
+          includePreviewVersions: false
+
+      - task: CmdLine@2
+        displayName: 'Install .NET MAUI Workload'
+        inputs:
+          script : 'dotnet workload install maui'
+
+      - pwsh: |
+          Invoke-WebRequest 'https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.ps1' -OutFile 'workload-install.ps1'
+          .\workload-install.ps1
+        displayName: Install Tizen Workload
+
+      # Print Information on the .NET SDK Used By the CI Build Host
+      # These logs are useful information when debugging CI Builds
+      # Note: This step doesn't execute nor modify any code; it is strictly used for logging + debugging purposes
+      - task: CmdLine@2
+        displayName: 'Display dotnet --info'
+        inputs:
+          script: dotnet --info
+
+      - task: CmdLine@2
+        displayName: 'Build CommunityToolkit.Maui.Markup.Sample'
+        inputs:
+          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj)'
+
   - job: build_library
     displayName: Build Library
     strategy:
@@ -117,11 +164,6 @@ jobs:
           script: 'dotnet build -c Release $(PathToCommunityToolkitCsproj)'
 
       - task: CmdLine@2
-        displayName: 'Build CommunityToolkit.Maui.Markup.Sample'
-        inputs:
-          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj)'
-
-      - task: CmdLine@2
         displayName: 'Build CommunityToolkit.Maui.Markup.UnitTests'
         inputs:
           script: 'dotnet build -c Release $(PathToCommunityToolkitUnitTestCsproj)'
@@ -147,21 +189,6 @@ jobs:
           codeCoverageTool: 'Cobertura'
           summaryFileLocation: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
           failIfCoverageEmpty: true
-
-      - task: DotNetCoreCLI@2
-        displayName: 'Run Benchmarks'
-        inputs:
-          command: 'custom'
-          custom: 'run'
-          arguments: '--project $(PathToCommunityToolkitBenchmarkCsproj) --configuration Release'
-
-      - task: PublishPipelineArtifact@1
-        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
-        displayName: 'Publish Benchmark Artifacts'
-        inputs:
-          targetPath: '$(Build.SourcesDirectory)/**/BenchmarkDotNet.Artifacts'
-          artifact: 'benchmark-results'
-          publishLocation: 'pipeline'
 
       # pack
       - task: CmdLine@2
@@ -213,3 +240,60 @@ jobs:
         inputs:
           artifactName: nuget
           pathToPublish: '$(Build.ArtifactStagingDirectory)'
+
+  - job: run_benchmarks
+    displayName: Run Benchmarks
+    strategy:
+      matrix:
+        'Windows':
+          image: 'windows-latest'
+        'macOS':
+          image: 'macos-13'
+    pool:
+      vmImage: $(image)
+    steps:
+      - task: CmdLine@2
+        displayName: 'Set Xcode v$(XcodeVersion)'
+        condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
+        inputs:
+          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
+
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
+          includePreviewVersions: false
+
+      - task: CmdLine@2
+        displayName: 'Install .NET MAUI Workload'
+        inputs:
+          script : 'dotnet workload install maui'
+
+      - pwsh: |
+          Invoke-WebRequest 'https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.ps1' -OutFile 'workload-install.ps1'
+          .\workload-install.ps1
+        displayName: Install Tizen Workload
+
+      # Print Information on the .NET SDK Used By the CI Build Host
+      # These logs are useful information when debugging CI Builds
+      # Note: This step doesn't execute nor modify any code; it is strictly used for logging + debugging purposes
+      - task: CmdLine@2
+        displayName: 'Display dotnet --info'
+        inputs:
+          script: dotnet --info
+          
+      - task: DotNetCoreCLI@2
+        displayName: 'Run Benchmarks'
+        inputs:
+          command: 'custom'
+          custom: 'run'
+          arguments: '--project $(PathToCommunityToolkitBenchmarkCsproj) --configuration Release'
+
+      - task: PublishPipelineArtifact@1
+        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
+        displayName: 'Publish Benchmark Artifacts'
+        inputs:
+          targetPath: '$(Build.SourcesDirectory)/**/BenchmarkDotNet.Artifacts'
+          artifact: 'benchmark-results'
+          publishLocation: 'pipeline'
