--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -294,6 +294,6 @@ jobs:
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         displayName: 'Publish Benchmark Artifacts'
         inputs:
-          targetPath: '$(Build.SourcesDirectory)/src/CommunityToolkit.Maui.Markup.Benchmarks/BenchmarkDotNet.Artifacts'
+          targetPath: '$(Build.SourcesDirectory)\src\CommunityToolkit.Maui.Markup.Benchmarks\BenchmarkDotNet.Artifacts'
           artifact: 'benchmark-results'
           publishLocation: 'pipeline'
