--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
   PathToCommunityToolkitBenchmarkCsproj: 'src/CommunityToolkit.Maui.Markup.Benchmarks/CommunityToolkit.Maui.Markup.Benchmarks.csproj'
   PathToCommunityToolkitSourceGeneratorsCsproj: 'src/CommunityToolkit.Maui.Markup.SourceGenerators/CommunityToolkit.Maui.Markup.SourceGenerators.csproj'
-  XcodeVersion: '15.2.0'
+  XcodeVersion: '15.3.0'
   ShouldCheckDependencies: true
   
 trigger:
@@ -286,7 +286,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Benchmarks'
         inputs:
-          script : 'dotnet run $(PathToCommunityToolkitBenchmarkCsproj) -c Release'
+          script : 'dotnet run --project $(PathToCommunityToolkitBenchmarkCsproj) -c Release'
 
       - task: PublishPipelineArtifact@1
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
