--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -248,7 +248,7 @@ jobs:
         'Windows':
           image: 'windows-latest'
         'macOS':
-          image: 'macos14'
+          image: 'macos-14'
     pool:
       vmImage: $(image)
     steps:
@@ -286,11 +286,12 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Benchmarks'
         inputs:
-          script : 'dotnet run --project $(PathToCommunityToolkitBenchmarkCsproj) -c Release'
+          script : 'dotnet run --project $(PathToCommunityToolkitBenchmarkCsproj) -c Release -- -a $(Build.ArtifactStagingDirectory)'
 
-      - task: PublishPipelineArtifact@1
+      # publish the Benchmark Results
+      - task: PublishBuildArtifacts@1
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         displayName: 'Publish Benchmark Artifacts'
         inputs:
-          artifact: 'benchmark-results'
-          publishLocation: 'pipeline'
+          artifactName: benchmarks
+          pathToPublish: '$(Build.ArtifactStagingDirectory)'
