--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ jobs:
       - task: CmdLine@2
         displayName: 'Build CommunityToolkit.Maui.Markup.Sample'
         inputs:
-          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj)'
+          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj) /p:EnableCodeSigning=false'
 
   - job: build_library
     displayName: Build Library
