--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 **/.vscode*
 
+**/.meteor*
+
 ### fastlane ###
 # fastlane - A streamlined workflow tool for Cocoa deployment
 
@@ -670,6 +672,9 @@ hs_err_pid*
 
 # MFractor
 .mfractor/
+
+# Benchmarkdot
+BenchmarkDotNet.Artifacts/
 
 ### VisualStudio ###
 ## Ignore Visual Studio temporary files, build results, and
