--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,10 @@ variables:
   PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
   PathToCommunityToolkitSampleCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
+  PathToCommunityToolkitBenchmarkCsproj: 'src/CommunityToolkit.Maui.Markup.Benchmarks/CommunityToolkit.Maui.Markup.Benchmarks.csproj'
   PathToCommunityToolkitSourceGeneratorsCsproj: 'src/CommunityToolkit.Maui.Markup.SourceGenerators/CommunityToolkit.Maui.Markup.SourceGenerators.csproj'
-  XcodeVersion: '15.2.0'
+  CommunityToolkitSampleApp_Xcode_Version: '15.2.0'
+  CommunityToolkitLibrary_Xcode_Version: '15.3.0'
   ShouldCheckDependencies: true
   
 trigger:
@@ -41,15 +43,62 @@ schedules:
     include:
     - main
 
-jobs:      
+jobs:
   - job: build_sample
+    displayName: Build Sample App
+    strategy:
+      matrix:
+        'Windows':
+          image: 'windows-latest'
+        'macOS':
+          image: 'macos-14'
+    pool:
+      vmImage: $(image)
+    steps:
+      - script: |
+          sudo xcode-select -s /Applications/Xcode_$(CommunityToolkitSampleApp_Xcode_Version).app 
+          sudo xcode-select -p
+        displayName: 'Set Xcode v$(CommunityToolkitSampleApp_Xcode_Version)'
+        condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
+
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
+          includePreviewVersions: false
+
+      - task: CmdLine@2
+        displayName: 'Install .NET MAUI Workload'
+        inputs:
+          script : 'dotnet workload install maui'
+
+      - pwsh: |
+          Invoke-WebRequest 'https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.ps1' -OutFile 'workload-install.ps1'
+          .\workload-install.ps1
+        displayName: Install Tizen Workload
+
+      # Print Information on the .NET SDK Used By the CI Build Host
+      # These logs are useful information when debugging CI Builds
+      # Note: This step doesn't execute nor modify any code; it is strictly used for logging + debugging purposes
+      - task: CmdLine@2
+        displayName: 'Display dotnet --info'
+        inputs:
+          script: dotnet --info
+
+      - task: CmdLine@2
+        displayName: 'Build CommunityToolkit.Maui.Markup.Sample'
+        inputs:
+          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj)'
+
+  - job: build_library
     displayName: Build Library
     strategy:
       matrix:
         'Windows':
           image: 'windows-latest'
         'macOS':
-          image: 'macos-13'
+          image: 'macos-14'
     pool:
       vmImage: $(image)
     steps:
@@ -73,11 +122,11 @@ jobs:
         displayName: Set NuGet Version to PR Version
         condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'), eq(variables['build.reason'], 'PullRequest'))
 
-      - task: CmdLine@2
-        displayName: 'Set Xcode v$(XcodeVersion)'
+      - script: |
+          sudo xcode-select -s /Applications/Xcode_$(CommunityToolkitLibrary_Xcode_Version).app 
+          sudo xcode-select -p
+        displayName: 'Set Xcode v$(CommunityToolkitLibrary_Xcode_Version)'
         condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
-        inputs:
-          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
 
       - task: UseDotNet@2
         displayName: 'Install .NET SDK'
@@ -114,11 +163,6 @@ jobs:
         displayName: 'Build CommunityToolkit.Maui.Markup'
         inputs:
           script: 'dotnet build -c Release $(PathToCommunityToolkitCsproj)'
-
-      - task: CmdLine@2
-        displayName: 'Build CommunityToolkit.Maui.Markup.Sample'
-        inputs:
-          script: 'dotnet build -c Release $(PathToCommunityToolkitSampleCsproj)'
 
       - task: CmdLine@2
         displayName: 'Build CommunityToolkit.Maui.Markup.UnitTests'
@@ -196,4 +240,59 @@ jobs:
         displayName: 'Publish NuGets'
         inputs:
           artifactName: nuget
+          pathToPublish: '$(Build.ArtifactStagingDirectory)'
+
+  - job: run_benchmarks
+    displayName: Run Benchmarks
+    strategy:
+      matrix:
+        'Windows':
+          image: 'windows-latest'
+        'macOS':
+          image: 'macos-14'
+    pool:
+      vmImage: $(image)
+    steps:
+      - script: |
+          sudo xcode-select -s /Applications/Xcode_$(CommunityToolkitLibrary_Xcode_Version).app 
+          sudo xcode-select -p
+        displayName: 'Set Xcode v$(CommunityToolkitLibrary_Xcode_Version)'
+        condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
+
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
+          includePreviewVersions: false
+
+      - task: CmdLine@2
+        displayName: 'Install .NET MAUI Workload'
+        inputs:
+          script : 'dotnet workload install maui'
+
+      - pwsh: |
+          Invoke-WebRequest 'https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.ps1' -OutFile 'workload-install.ps1'
+          .\workload-install.ps1
+        displayName: Install Tizen Workload
+
+      # Print Information on the .NET SDK Used By the CI Build Host
+      # These logs are useful information when debugging CI Builds
+      # Note: This step doesn't execute nor modify any code; it is strictly used for logging + debugging purposes
+      - task: CmdLine@2
+        displayName: 'Display dotnet --info'
+        inputs:
+          script: dotnet --info
+
+      - task: CmdLine@2
+        displayName: 'Run Benchmarks'
+        inputs:
+          script : 'dotnet run --project $(PathToCommunityToolkitBenchmarkCsproj) -c Release -- -a $(Build.ArtifactStagingDirectory)'
+
+      # publish the Benchmark Results
+      - task: PublishBuildArtifacts@1
+        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
+        displayName: 'Publish Benchmark Artifacts'
+        inputs:
+          artifactName: benchmarks
           pathToPublish: '$(Build.ArtifactStagingDirectory)'
